# google_play_signer

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
google_play_signer/: auth.py  catappult_client.py  config.py  googleplay_client.py  main.py
images/: GPSignerFlow.drawio  gp_signer_communication.drawio
